--- a/front-end/mindful/src/index.html
+++ b/front-end/mindful/src/index.html
@@ -13,4 +13,5 @@
   <app-root></app-root>
 </body>
 <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </html>
