--- a/front-end/mindful/src/index.html
+++ b/front-end/mindful/src/index.html
@@ -6,12 +6,19 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Vendor links -->
   <link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/simplex/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Calligraffitti|Indie+Flower|Merienda" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
 </body>
+<!--Vendor scripts -->
 <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </html>
