starts styling on community page

--- a/front-end/mindful/src/index.html
+++ b/front-end/mindful/src/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Calligraffitti|Indie+Flower|Merienda" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Calligraffitti|Indie+Flower|Merienda|Kalam" rel="stylesheet">
 
 </head>
 <body>
